; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/fts3/extr_fts3_tokenizer.c_fts3TokenizerEnabled.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/fts3/extr_fts3_tokenizer.c_fts3TokenizerEnabled.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SQLITE_DBCONFIG_ENABLE_FTS3_TOKENIZER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @fts3TokenizerEnabled to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fts3TokenizerEnabled(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i32* @sqlite3_context_db_handle(i32* %5)
  store i32* %6, i32** %3, align 8
  store i32 0, i32* %4, align 4
  %7 = load i32*, i32** %3, align 8
  %8 = load i32, i32* @SQLITE_DBCONFIG_ENABLE_FTS3_TOKENIZER, align 4
  %9 = call i32 @sqlite3_db_config(i32* %7, i32 %8, i32 -1, i32* %4)
  %10 = load i32, i32* %4, align 4
  ret i32 %10
}

declare dso_local i32* @sqlite3_context_db_handle(i32*) #1

declare dso_local i32 @sqlite3_db_config(i32*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
